# ChangeLog for xfce-extra/xfce4-weather-plugin
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-weather-plugin/ChangeLog,v 1.14 2011/11/09 18:42:49 ssuominen Exp $

*xfce4-weather-plugin-0.7.4-r1 (09 Nov 2011)

  09 Nov 2011; Samuli Suominen <ssuominen@gentoo.org>
  +xfce4-weather-plugin-0.7.4-r1.ebuild:
  Change PARTNER_ID and LICENSE_KEY wrt upstream
  http://bugzilla.xfce.org/show_bug.cgi?id=8105

*xfce4-weather-plugin-0.7.4 (03 Feb 2011)

  03 Feb 2011; Samuli Suominen <ssuominen@gentoo.org>
  +xfce4-weather-plugin-0.7.4.ebuild:
  Version bump.

*xfce4-weather-plugin-0.7.3_p20110129 (29 Jan 2011)

  29 Jan 2011; Samuli Suominen <ssuominen@gentoo.org>
  +xfce4-weather-plugin-0.7.3_p20110129.ebuild:
  Initial commit.
