@@ -1,29 +1,0 @@
-# Copyright 1999-2011 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-weather-plugin/Attic/xfce4-weather-plugin-0.7.4.ebuild,v 1.2 2011/05/19 21:45:53 ssuominen Exp $
-
-EAPI=4
-inherit xfconf
-
-DESCRIPTION="A weather plug-in for the Xfce desktop environment"
-HOMEPAGE="http://goodies.xfce.org/projects/panel-plugins/xfce4-weather-plugin"
-SRC_URI="mirror://xfce/src/panel-plugins/${PN}/0.7/${P}.tar.bz2"
-
-LICENSE="GPL-2"
-SLOT="0"
-KEYWORDS="~amd64 ~x86"
-IUSE="debug"
-
-RDEPEND=">=x11-libs/gtk+-2.6:2
-	>=xfce-base/libxfce4util-4.8
-	>=xfce-base/libxfcegui4-4.8
-	>=xfce-base/xfce4-panel-4.8
-	>=dev-libs/libxml2-2.4"
-DEPEND="${RDEPEND}
-	dev-util/intltool
-	dev-util/pkgconfig"
-
-pkg_setup() {
-	XFCONF=( $(xfconf_use_debug) )
-	DOCS=( AUTHORS ChangeLog NEWS README TODO )
-}
