@@ -1,6 +1,10 @@
 # ChangeLog for xfce-extra/xfce4-weather-plugin
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-weather-plugin/ChangeLog,v 1.14 2011/11/09 18:42:49 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-weather-plugin/ChangeLog,v 1.15 2011/11/11 20:14:34 ssuominen Exp $
+
+  11 Nov 2011; Samuli Suominen <ssuominen@gentoo.org>
+  -xfce4-weather-plugin-0.7.4.ebuild:
+  old
 
 *xfce4-weather-plugin-0.7.4-r1 (09 Nov 2011)
 
